--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "library-app",
+  "name": "bookhive",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.19.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "express": "^4.19.2"
   }
 }
